# pefe-agent

./: README.md  config.example.json  setup.cfg
pefe_agent/: __main__.py  config.py
pefe_agent/consumer/: __init__.py  consumer.py  pefe_consumer.py
