[metadata]
name = pefe-agent
version = attr: pefe_agent.__version__
author = Vu Tung Lam
author_email = vutunglaminfo@gmail.com
description = PEFE system agent module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pefe-system/pefe-agent
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    lmdb==1.7.3
    msgpack>=0.6.2,<=1.1.1
    msgpack-numpy==0.4.8
    pefe-common @ git+ssh://git@github.com/pefe-system/pefe-common.git@ae4c01d8469a731ed9680f3c55e6e740ddbffa00

[options.packages.find]
where = .
